--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -46,7 +46,22 @@
       <h1><center>TechCon 2024 conference</center></h1>
     </header>
 
-    <main></main>
+    <main>
+      <section id="introduction"></section>
+        <h2>TechCon 2024: Shaping the Future of Technology</h2>
+        <p>TechCon 2024 is a premier global technology conference, bringing together leading innovators, entrepreneurs, and thought leaders from various industries to explore the cutting-edge advancements shaping our world. Set to take place in [location], this year’s event will focus on transformative technologies like AI, blockchain, quantum computing, and sustainable tech, alongside the latest trends in software development, cybersecurity, and digital transformation.</p>
+
+        <p>With a diverse agenda that includes keynote speeches, panel discussions, hands-on workshops, and networking opportunities, TechCon 2024 is designed for professionals looking to stay ahead of the curve. Attendees will engage with industry experts, discover breakthrough solutions, and gain insights into how emerging technologies can drive innovation across sectors.</p>
+          
+        <p> Whether you’re a tech enthusiast, business leader, or developer, TechCon 2024 offers the platform to connect, learn, and inspire the future of technology.</p>
+
+        <video controls width="500">
+          <source src="TechCon.mp4" type="video/mp4">
+          <track src="TechCon.srt" kind="captions" srclang="en" label="English">
+          Your Browser Does not Support The Video Tag.
+        </video>
+      </section>
+    </main>
 
     <footer></footer>
   </body>
