--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -47,7 +47,7 @@
     </header>
 
     <main>
-      <section id="introduction">
+      <section>
         <h2>TechCon 2024: Shaping the Future of Technology</h2>
         <p>TechCon 2024 is a premier global technology conference, bringing together leading innovators, entrepreneurs, and thought leaders from various industries to explore the cutting-edge advancements shaping our world. Set to take place in [location], this year’s event will focus on transformative technologies like AI, blockchain, quantum computing, and sustainable tech, alongside the latest trends in software development, cybersecurity, and digital transformation.</p>
 
