adding video and subtitle in assets folder

--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -56,8 +56,8 @@
         <p> Whether you’re a tech enthusiast, business leader, or developer, TechCon 2024 offers the platform to connect, learn, and inspire the future of technology.</p>
 
         <video controls width="500">
-          <source src="TechCon.mp4" type="video/mp4">
-          <track src="TechCon.srt" kind="captions" srclang="en" label="English">
+          <source src="assets/TechCon.mp4" type="video/mp4">
+          <track src="assets/TechCon.srt" kind="captions" srclang="en" label="English">
           Your Browser Does not Support The Video Tag.
         </video>
       </section>
