adding content to schedule page

--- a/techcon_website/contact.html
+++ b/techcon_website/contact.html
@@ -49,6 +49,8 @@
       
     </main>
 
-    <footer></footer>
+    <footer>
+      <p>&copy; 2024 TechCon. All rights reserved.</p>
+    </footer>
   </body>
 </html>
