--- a/techcon_website/register.html
+++ b/techcon_website/register.html
@@ -47,6 +47,8 @@
 
     <main></main>
 
-    <footer></footer>
+    <footer>
+      <p>&copy; 2024 TechCon. All rights reserved.</p>
+    </footer>
   </body>
 </html>
