--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -63,6 +63,8 @@
       </section>
     </main>
 
-    <footer></footer>
+    <footer>
+      <p>&copy; 2024 TechCon. All rights reserved.</p>
+    </footer>
   </body>
 </html>
