--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -42,11 +42,62 @@
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
-      <h1><center>Schedule</center></h1>
+      <h1><center>Schedule for TechCon 2024</center></h1>
     </header>
 
-    <main></main>
+    <main>
+        <!-- TechCon Schedule Table -->
+         <table>
+          <caption>Detailed Schedule of Events for TechCon 2024</caption>
+          <thead>
+            <tr>
+              <th scope="col">Time</th>
+              <th scope="col">Session</th>
+              <th scope="col">Speaker</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>9:00 AM - 10:00 AM</td>
+              <td>Opening Keynote: The Future of AI</td>
+              <td>Elon Musk</td>
+            </tr>
+            tr>
+                    <td>10:15 AM - 11:15 AM</td>
+                    <td>Cloud Computing Innovations</td>
+                    <td>Satya Nadella</td>
+                </tr>
+                <tr>
+                    <td>11:30 AM - 12:30 PM</td>
+                    <td>Leadership in Tech</td>
+                    <td>Sheryl Sandberg</td>
+                </tr>
+                <tr>
+                    <td>12:30 PM - 1:30 PM</td>
+                    <td>Lunch Break</td>
+                    <td>N/A</td>
+                </tr>
+                <tr>
+                    <td>1:45 PM - 2:45 PM</td>
+                    <td>Cybersecurity and Data Privacy</td>
+                    <td>Eva Chen</td>
+                </tr>
+                <tr>
+                    <td>3:00 PM - 4:00 PM</td>
+                    <td>Advances in Quantum Computing</td>
+                    <td>Scott Aaronson</td>
+                </tr>
+                <tr>
+                    <td>4:15 PM - 5:15 PM</td>
+                    <td>Panel: Women in Tech</td>
+                    <td>Various Speakers</td>
+                </tr>
+          </tbody>
+         </table>
+    </main>
 
-    <footer></footer>
+    <footer>
+      <p>&copy; 2024 TechCon. All rights reserved.</p>
+    </footer>
   </body>
 </html>
