adding copyrights in all pages

--- a/techcon_website/register.html
+++ b/techcon_website/register.html
@@ -48,7 +48,7 @@
     <main></main>
 
     <footer>
-      <p>&copy; 2024 TechCon. All rights reserved.</p>
+      <p>&copy; 2024 TechCon. All copyright reserved.</p>
     </footer>
   </body>
 </html>
