--- a/techcon_website/about.html
+++ b/techcon_website/about.html
@@ -87,7 +87,7 @@
     </main>
 
     <footer>
-      <p>&copy; 2024 TechCon. All rights reserved.</p>
+      <p>&copy; 2024 TechCon. All copyright reserved.</p>
     </footer>
   </body>
 </html>
