--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -97,7 +97,7 @@
     </main>
 
     <footer>
-      <p>&copy; copyright 2024 TechCon. All rights reserved.</p>
+      <p>&copy; copyright 2024 TechCon. All copyright reserved.</p>
     </footer>
   </body>
 </html>
