--- a/techcon_website/register.html
+++ b/techcon_website/register.html
@@ -42,10 +42,29 @@
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
-      <h1><center>Register</center></h1>
+      <h1><center>Register for TechCon 2024</center></h1>
     </header>
 
-    <main></main>
+    <main>
+      <form action="/submit-form" method="post">
+        <label for="username">Username:</label>
+        <input type="text" name="username" placeholder="Username"><br>
+        
+        <label for="email">E-mail:</label>
+        <input type="email" name="email" placeholder="Email"><br>
+
+        <label for="password">Password:</label>
+        <input type="password" name="password" placeholder="Password"><br>
+
+        <input type="checkbox" name="Gander" value="male">
+        <label for="Gander">Male</label><br>
+
+        <input type="checkbox" name="Gander" value="female">
+        <label for="Gander">Female</label> <br>       
+
+        <button type="submit">Submit</button>
+      </form>
+    </main>
 
     <footer>
       <p>&copy; 2024 TechCon. All copyright reserved.</p>
