--- a/techcon_website/register.html
+++ b/techcon_website/register.html
@@ -42,7 +42,7 @@
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
-      <h1><center>Register for TechCon 2024</center></h1>
+      <h1>Register for TechCon 2024</h1>
     </header>
 
     <main>
