--- a/techcon_website/contact.html
+++ b/techcon_website/contact.html
@@ -28,6 +28,28 @@
       nav li a:hover{
         background-color: #111;
       }
+
+      .map-container {
+      position: relative;
+      padding-bottom: 56.25%; /* 16:9 aspect ratio */
+      height: 0;
+      overflow: hidden;
+    }
+    .map-container iframe {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 70%;
+      height: 70%;
+      border: 0;
+    }
+    main img{
+      width: 25px;
+      height: 25px;
+      padding: 20px;
+
+      margin: 0;
+    }
     </style>
   </head>
 
@@ -42,12 +64,46 @@
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
-      <h1><center>Contact</center></h1>
+      <h1><center>Contact Us</center></h1>
     </header>
 
-    <main>
-      
-    </main>
+    <center><main>
+      <section><h2>E-mail</h2><br>
+      <a href="mailto:a.khalid5322@gmail.com">a.khalid5322@gmail.com</a></section>
+
+      <section>
+        <h2>Social Media Links</h2><br>
+        <a href="https://www.facebook.com/Abd.UlRahman.Khalid15/" target="_blank"><img src="assets/facebook.png" alt="facebook"></a>
+
+        <a href="https://www.linkedin.com/in/abd-ulrahman-khalid-82b73513b/ " target="_blank" ><img src="assets/linkedin.png" alt="facebook"></a>
+      </section>
+
+
+      <h1>TechCon 2024 - Conference Venue</h1>
+      <p>Join us at the San Francisco Convention Center for TechCon 2024!</p>
+      <div class="map-container">
+        <iframe 
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3153.019924368776!2d-122.4008256846813!3d37.78409187975785!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80858064d263d6bb%3A0x99f8f8d85b40fb01!2sSan%20Francisco%20Convention%20Center!5e0!3m2!1sen!2sus!4v1694512345678!5m2!1sen!2sus" 
+          allowfullscreen="" 
+          loading="lazy">
+        </iframe>
+      </div>
+
+      <h2>Contact Us</h2>
+      <form action="/submit-form" method="post">
+        <label for="username">Username:</label>
+        <input type="text" name="username" placeholder="Username"><br>
+
+        <label for="email">E-mail:</label>
+        <input type="email" name="email" placeholder="Email"><br>
+
+        <label for="message">Message:</label>
+        <textarea id="message" name="message" rows="5" required></textarea><br>
+
+        <button type="submit">Send Message</button>
+      </form>
+
+    </main></center>
 
     <footer>
       <p>&copy; 2024 TechCon. All copyright reserved.</p>
