removing center tag from the h1 tag

--- a/techcon_website/contact.html
+++ b/techcon_website/contact.html
@@ -64,10 +64,10 @@
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
-      <h1><center>Contact Us</center></h1>
+      <h1>Contact Us</h1>
     </header>
 
-    <center><main>
+<main>
       <section><h2>E-mail</h2><br>
       <a href="mailto:a.khalid5322@gmail.com">a.khalid5322@gmail.com</a></section>
 
