adding my e-mail in the footer tag

--- a/techcon_website/contact.html
+++ b/techcon_website/contact.html
@@ -103,9 +103,10 @@
         <button type="submit">Send Message</button>
       </form>
 
-    </main></center>
+    </main>
 
     <footer>
+      <a href="mailto:a.khalid5322@gmail.com">a.khalid5322@gmail.com</a><br>
       <p>&copy; 2024 TechCon. All copyright reserved.</p>
     </footer>
   </body>
