mailto:email@example.com

--- a/techcon_website/contact.html
+++ b/techcon_website/contact.html
@@ -72,6 +72,8 @@
       <a href="mailto:a.khalid5322@gmail.com">a.khalid5322@gmail.com</a></section>
 
       <section>
+        <h2>Email Me</h2><br>
+        <a href="mailto:email@example.com">a.khalid5322@gmail.com</a><br>
         <h2>Social Media Links</h2><br>
         <a href="https://www.facebook.com/Abd.UlRahman.Khalid15/" target="_blank"><img src="assets/facebook.png" alt="facebook"></a>
 
@@ -106,7 +108,7 @@
     </main>
 
     <footer>
-      <a href="mailto:a.khalid5322@gmail.com">a.khalid5322@gmail.com</a><br>
+      
       <p>&copy; 2024 TechCon. All copyright reserved.</p>
     </footer>
   </body>
